[package]
name = "riked"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun = { version = "0.5", git = "https://github.com/hargonix/rust-tun" }
mio = { version = "0.7.13", features = ["os-ext", "os-poll", "net"] }
crypto = { version = "0.3", features = ["aead", "std"] }
aes-gcm = "0.9.4"
block-modes = "0.8"
block-padding = "0.2"
byteorder = "1.4"
generic-array = "0.14"
typenum = "1.14"
hmac = "0.11"
sha2 = "0.9"
aes = "0.7"